cmd/openshift/operator/kodata/static/tekton-results/route-ingress/ingress.yaml
# Copyright 2025 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-results-api-service
  namespace: openshift-pipelines
  labels:
    app.kubernetes.io/name: tekton-results-api
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/component: api
spec:
  rules:
  - host: "tekton-results-api-service.app.cluster.domain"  # Will be configured dynamically
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tekton-results-api-service
            port:
              number: 8080
  tls:
  - hosts:
    secretName: tekton-results-api-tls
